Added ReadMe file

--- a/style.css
+++ b/style.css
@@ -117,3 +117,48 @@ nav .fas{
     padding: 30px;
   }
 }
+
+.course{
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+}
+h1{
+  font-size: 36px;
+  font-weight: 600;
+}
+p{
+  color: #777;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 22px;
+  padding: 10px;
+}
+.row{
+  margin-top: 5%;
+  display: flex;
+  justify-content: space-between;
+}
+.courseOption{
+  flex-basis: 31%;
+  background: #fff3f3;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  padding: 20px;
+  box-sizing: border-box;
+  transition: 0.5s;
+}
+h3{
+  text-align: center;
+  font-weight: 600;
+  margin: 10px 0;
+}
+.courseOption:hover{
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, .2);
+}
+@media(max-width: 700px){
+  .row{
+    flex-direction: column;
+  }
+}
