added Facilites & campus sections with styling

--- a/style.css
+++ b/style.css
@@ -162,3 +162,79 @@ h3{
     flex-direction: column;
   }
 }
+
+.campus{
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  
+  padding-top: 50px;
+}
+.campusOption{
+  flex-basis: 32%;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  position: relative;
+  overflow: hidden;
+}
+.campusOption img{
+  width: 100%;
+  display: block;
+}
+.layer{
+  background: transparent ;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: 0.5s;
+}
+
+.layer:hover{
+  background: rgba(226,0,0,0.7);
+
+}
+.layer h3{
+  width: 100%;
+  font-weight: 500;
+  color: #fff;
+  font-size: 26px;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.layer:hover h3{
+  bottom: 49%;
+  opacity: 1;
+}
+
+.facilities{
+  width: 80%;
+  margin: auto;
+  text-align: center;
+  padding-top: 100px;
+}
+.facilitiesOption{
+  flex-basis: 31%;
+  border-radius: 10px;
+  margin-bottom: 5%;
+  text-align: left;
+
+}
+.facilitiesOption img{
+  width: 100%;
+  border-radius: 5%;
+}
+.facilitiesOption p{
+  padding: 0;
+}
+.facilitiesOption h3{
+  margin-top: 16px;
+  margin-bottom: 15px;
+  text-align: left;
+}
